--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <h2>Sports</h2>
       <p>Back in school I used  to ride my bike a lot, but today I rarely have to overcome long distances. This is why I joined the local fitness centre and took some university sports courses. Windsurfing for example was a lot of fun, I even passed the windsurf exam and got the international basic license. Later, I started to boulder indoor. After times with aching hands, I find myself improving from time to time. Because there are so much kinds of sports to discover, I also enrolled for the parcours course in 2015.</p>
     </section>
-    <p class="copyright">Copyright &copy; by Marvin Bornstein 2015</p>
+    <!-- <p class="copyright">Copyright &copy; by Marvin Bornstein 2015 - 2016</p> -->
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
