--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
       </div>
       <h2>Experience and Projects</h2>
       <p>
-        Within my work as student assistant, I earned the most experience about developing in a team. The biggest project was <em>openHPI</em>, were I worked for 15 months. Always have a look at my <a href="/data/lebenslauf.pdf">PDF Resume</a>. We also do many projects at our university in order to make use of the theoretical skills we learn in the lectures.
+        Within my work as student assistant, I earned the most experience about developing in a team. The biggest project was <em>openHPI</em>, were I worked for 15 months. Always have a look at my <a href="/data/lebenslauf.pdf">PDF Resume</a>.
       </p>
       <p>
-        A few projects I contributed to, can be found on <a href="https://github.com/mbornstein">Github</a>. There is <em>CGSee</em>, a 3D Scene viewer developed in C++ with Qt and OpenGL, that has been part of a computer graphics seminar at the Hasso-Plattner-Institut and the <em>Morphic Testing Framework</em>, which is a small framework to test the morphic UI of squeak smalltalk. (like selenium for web applications) The second one arose from within a lecture at my university about software architecture and software techniques.
+        A few projects I contributed to, can be found on <a href="https://github.com/mbornstein">Github</a>. For a computer graphics seminar, a fellow student and I worked on a 3D Scene viewer developed in C++ with Qt and OpenGL and implemented <em>Cascaded Variance Shadow Mapping</em>. Within a software technique and architecture course, we created the <em>Morphic Testing Framework</em>, which is a small framework to test the morphic UI of squeak smalltalk (like selenium for web applications). Lastly, for an HCI course, we built a fitness application for interactive floors, after a design thinking like process (<a href="data/paper.pdf">see our paper</a>).
       </p>
     </section>
     <section>
