update linkedIn link

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </ul>
       </div>
       <p class="social_references">Also find me on: 
-        <a href="https://www.linkedin.com/profile/view?id=386118572">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/mcbornstein">LinkedIn</a>
         &#124;
         <a href="https://ctftime.org/user/6655">CTF Time</a>
         &#124;
