--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
       <h2>Experience and Projects</h2>
       <p>
-        Within my work as student assistant, I earned the most experience about developing in a team. The biggest project was <em>openHPI</em>, were I worked for 15 months. Always have a look at my <a href="/data/lebenslauf.pdf">PDF Resume</a>.
+        Within my work as student assistant, I earned the most experience about developing in a team. The biggest project was <em>openHPI</em>, were I worked for 15 months. Always have a look at my <a href="/data/mbornstein-resume.pdf">PDF Resume</a>.
       </p>
       <p>
         A few projects I contributed to, can be found on <a href="https://github.com/mbornstein">Github</a>. For a computer graphics seminar, a fellow student and I worked on a 3D Scene viewer developed in C++ with Qt and OpenGL and implemented <em>Cascaded Variance Shadow Mapping</em>. Within a software technique and architecture course, we created the <em>Morphic Testing Framework</em>, which is a small framework to test the morphic UI of squeak smalltalk (like selenium for web applications). Lastly, for an HCI course, we built a fitness application for interactive floors, after a design thinking like process (<a href="data/paper.pdf">see our paper</a>).
