add bp, hci fitness floor and openHPI

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ and is wrapped around the whole page content, except for the footer in this exam
           <img src="./content/nexBoard/nexboard@0,5x.jpg" alt="Nature" style="width:100%">
           <div class="w3-container">
             <h3>
-              <b>Developing nexboard</b>
+              <b>neXboard</b>
             </h3>
             <h5>Software Developer at nexenio,
               <span class="w3-opacity">Oct 2016 – present</span>
@@ -69,15 +69,13 @@ and is wrapped around the whole page content, except for the footer in this exam
               in images. Furthermore, I have taken roles in the sales process and acquired customers on several international
               startup and tech fairs.</p>
             <div class="w3-row">
-              <div class="w3-col m8 s12">
-                <p>
-                  <a href="https://www.nexenio.com/nexboard/">
-                    <button class="w3-button w3-padding-large w3-white w3-border">
-                      <b>READ MORE »</b>
-                    </button>
-                  </a>
-                </p>
-              </div>
+              <p>
+                <a href="https://www.nexenio.com/nexboard/">
+                  <button class="w3-button w3-padding-large w3-white w3-border">
+                    <b>READ MORE »</b>
+                  </button>
+                </a>
+              </p>
             </div>
           </div>
         </div>
@@ -105,19 +103,122 @@ and is wrapped around the whole page content, except for the footer in this exam
               help you through the day.</p>
             <p>The concept was presented at the SAP TechEd Las Vegas 2015, DKOM Germany 2016 and the Mobile World Congress in
               Barcelona 2016.</p>
-            <!-- <div class="w3-row">
-              <div class="w3-col m8 s12">
-                <p>
-                  <a href="">
-                    <button class="w3-button w3-padding-large w3-white w3-border">
-                      <b>READ MORE »</b>
-                    </button>
-                  </a>
-                </p>
-              </div>
-            </div> -->
           </div>
         </div>
+
+        <hr>
+
+        <!-- Blog entry -->
+        <div class="w3-card-4 w3-margin w3-white">
+          <img src="./content/BP_sales_planner/overview@0,5x.png" alt="Nature" style="width:100%">
+          <div class="w3-container">
+            <h3>
+              <b>Dynamic Tour Planning</b>
+            </h3>
+            <h5>Bachelor project with Colgate-Palmolive France,
+              <span class="w3-opacity">Oct 2014 – Jul 2015</span>
+            </h5>
+          </div>
+
+          <div class="w3-container">
+            <p>Two-semester project with Colgate-Palmolive as business partner which covered in my bachelor's thesis. We developed
+              an interacive tour planning application for sales representatives. It optimizes routes and visits based on
+              several KPIs and point of sales data. We also presented the result directly to the CIO and CTO of Colgate-Palmolive.
+            </p>
+            <div class="w3-row">
+              <p>
+                <a href="./content/BP_sales_planner/BP 2015 HP1 Poster Version 6 (ohne Schnittmarken).pdf" class="no-deco">
+                  <button class="w3-button w3-padding-large w3-white w3-border">
+                    <b>Poster »</b>
+                  </button>
+                </a>
+                <a href="http://stream.hpi.uni-potsdam.de:8080/download/podcast/SS_2015/BP_SS15/BP_2015_07_06_01/BP_2015_07_06_01_part_2_podcast.mp4"
+                  class="no-deco">
+                  <button class="w3-button w3-padding-large w3-white w3-border">
+                    <b>Presentation »</b>
+                  </button>
+                </a>
+                <a href="./content/BP_sales_planner/screencast_2.mp4" class="no-deco">
+                  <button class="w3-button w3-padding-large w3-white w3-border">
+                    <b>Screencast »</b>
+                  </button>
+                </a>
+                <a href="https://www.youtube.com/watch?v=7wJkvl1mJik" class="no-deco">
+                  <button class="w3-button w3-padding-large w3-white w3-border">
+                    <b>HPI BP Video »</b>
+                  </button>
+                </a>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <hr>
+
+        <!-- Blog entry -->
+        <div class="w3-card-4 w3-margin w3-white">
+          <img src="./content/HCI_fitness_floor/overview@0,5x.jpg" alt="Nature" style="width:100%">
+          <div class="w3-container">
+            <h3>
+              <b>Calorinator</b>
+            </h3>
+            <h5>Fitness application for an interactive floor,
+              <span class="w3-opacity">Jan 2015</span>
+            </h5>
+          </div>
+
+          <div class="w3-container">
+            <p>In a seminar, we build a jump'n'run game for interactive floors to maintain body fitness. Players control themselves
+              directly by stepping, jumping or lying on the floor. In a forest, users jump over fallen trees or cross an
+              ocean by holding themselves on ice floes. Repairing a bridge in shortage of time or similar complex tasks pack
+              fitness exercises in an exciting adventure. This motivates users to do regular physical activity.
+            </p>
+            <div class="w3-row">
+              <p>
+                <a href="./content/HCI_fitness_floor/paper.pdf">
+                  <button class="w3-button w3-padding-large w3-white w3-border">
+                    <b>READ MORE »</b>
+                  </button>
+                </a>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <hr>
+
+        <!-- Blog entry -->
+        <div class="w3-card-4 w3-margin w3-white">
+          <img src="./content/openHPI/Untitled-2@0,5x.png" alt="Nature" style="width:100%">
+          <div class="w3-container">
+            <h3>
+              <b>openHPI</b>
+            </h3>
+            <h5>Software Developer at Hasso-Plattner-Institute,
+              <span class="w3-opacity">Sep 2013 – Nov 2014</span>
+            </h5>
+          </div>
+
+          <div class="w3-container">
+            <p>openHPI.de is a free eLearning platform offering courses from the HPI about advanced computer science topics.
+              I was working in a team of other bachelor and master students. We have been developing the web application
+              from scratch using ruby on rails. I got a lot of experience about agile and test driven development.
+            </p>
+            <div class="w3-row">
+              <p>
+                <a href="https://open.hpi.de">
+                  <button class="w3-button w3-padding-large w3-white w3-border">
+                    <b>READ MORE »</b>
+                  </button>
+                </a>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <hr>
+
+
 
         <!-- END BLOG ENTRIES -->
       </div>
