--- a/index.html
+++ b/index.html
@@ -245,61 +245,53 @@ and is wrapped around the whole page content, except for the footer in this exam
         <!-- Posts -->
         <div class="w3-card w3-margin">
           <div class="w3-container w3-padding">
-            <h4>Popular Posts</h4>
+            <h4>Education</h4>
           </div>
           <ul class="w3-ul w3-hoverable w3-white">
             <li class="w3-padding-16">
-              <img src="./W3.CSS Template_files/workshop.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-              <span class="w3-large">Lorem</span>
+              <img src="./data/hpi.png" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+              <span class="w3-large">Hasso-Plattner-Institute</span>
               <br>
-              <span>Sed mattis nunc</span>
+              <span>IT-Systems Engineering, B.Sc. 2015 & M.Sc. ongoing</span>
             </li>
             <li class="w3-padding-16">
-              <img src="./W3.CSS Template_files/gondol.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-              <span class="w3-large">Ipsum</span>
+              <img src="./data/eth.png" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+              <span class="w3-large">ETH Zürich</span>
               <br>
-              <span>Praes tinci sed</span>
+              <span>Exchange semester 2017/18</span>
             </li>
             <li class="w3-padding-16">
-              <img src="./W3.CSS Template_files/skies.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-              <span class="w3-large">Dorum</span>
+              <img src="./data/tub.png" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+              <span class="w3-large">TU Berlin</span>
               <br>
-              <span>Ultricies congue</span>
-            </li>
-            <li class="w3-padding-16 w3-hide-medium w3-hide-small">
-              <img src="./W3.CSS Template_files/rock.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-              <span class="w3-large">Mingsum</span>
-              <br>
-              <span>Lorem ipsum dipsum</span>
+              <span>Guest auditor, Apr 2016 – Oct 2017</span>
             </li>
           </ul>
         </div>
         <hr>
 
-        <!-- Labels / tags
+        <!-- Labels / tags -->
         <div class="w3-card w3-margin">
           <div class="w3-container w3-padding">
-            <h4>Tags</h4>
+            <h4>Interests</h4>
           </div>
           <div class="w3-container w3-white">
             <p>
-              <span class="w3-tag w3-black w3-margin-bottom">Travel</span>
-              <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">New York</span>
-              <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">London</span>
-              <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">IKEA</span>
-              <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">NORWAY</span>
-              <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">DIY</span>
-              <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Ideas</span>
-              <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Baby</span>
-              <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Family</span>
-              <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">News</span>
-              <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Clothing</span>
-              <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Shopping</span>
-              <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Sports</span>
-              <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Games</span>
+              <span class="w3-tag w3-light-grey w3-margin-bottom w3-small">Python</span>
+              <span class="w3-tag w3-light-grey w3-margin-bottom w3-small">Computer Vision</span>
+              <span class="w3-tag w3-light-grey w3-margin-bottom w3-small">Deep Learning</span>
+              <span class="w3-tag w3-light-grey w3-margin-bottom w3-small">Natural Language Processing</span>
+              <span class="w3-tag w3-light-grey w3-margin-bottom w3-small">Infosec CTFs</span>
+              <span class="w3-tag w3-light-grey w3-margin-bottom w3-small">Information Security</span>
+              <span class="w3-tag w3-light-grey w3-margin-bottom w3-small">Climbing/Bouldering</span>
+              <span class="w3-tag w3-light-grey w3-margin-bottom w3-small">Wind-/Surfing</span>
+              <span class="w3-tag w3-light-grey w3-margin-bottom w3-small">Photography</span>
+              <span class="w3-tag w3-light-grey w3-margin-bottom w3-small">Guitar</span>
+              <span class="w3-tag w3-light-grey w3-margin-bottom w3-small">E-Bass</span>
+              <span class="w3-tag w3-light-grey w3-margin-bottom w3-small">Psychology</span>
             </p>
           </div>
-        </div> -->
+        </div>
 
         <!-- END Introduction Menu -->
       </div>
