--- a/index.html
+++ b/index.html
@@ -349,5 +349,13 @@ and is wrapped around the whole page content, except for the footer in this exam
 </body>
 
 <script src="https://use.fontawesome.com/2c7ec646d0.js"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-62894018-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+  gtag('config', 'UA-62894018-1');
+</script>
 
 </html>
