--- a/index.html
+++ b/index.html
@@ -51,6 +51,36 @@ and is wrapped around the whole page content, except for the footer in this exam
       <div class="w3-col l8 s12">
         <!-- Blog entry -->
         <div class="w3-card-4 w3-margin w3-white">
+          <img src="./content/photobox/overview@0,5x.jpg" alt="Nature" style="width:100%">
+          <div class="w3-container">
+            <h3>
+              <b>Raspberry Pi Photobox</b>
+            </h3>
+            <h5>personal project,
+              <span class="w3-opacity">April 2018</span>
+            </h5>
+          </div>
+
+          <div class="w3-container">
+            <p>I built a photobox using a Raspberry Pi, its GPIO, my DSLR and a screen. It accepts chocolate gold coins and
+              triggers 4 flash light shots in grayscale, stitches them together and displays them on a screen. We used it
+              for a party and created a caribbean background. It was quite a fun project, but took some hacks to really work.</p>
+            <div class="w3-row">
+              <p>
+                <a href="https://youtu.be/HXAFc7VzyrQ">
+                  <button class="w3-button w3-padding-large w3-white w3-border">
+                    <b>Video »</b>
+                  </button>
+                </a>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <hr>
+
+        <!-- Blog entry -->
+        <div class="w3-card-4 w3-margin w3-white">
           <img src="./content/NSIP/overview@0,5x.jpg" alt="Nature" style="width:100%">
           <div class="w3-container">
             <h3>
