--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@ and is wrapped around the whole page content, except for the footer in this exam
         <a href="https://www.instagram.com/marvinbornstein/" class="no-deco">
           <i class="fa fa-instagram w3-hover-opacity"></i>
         </a>
-        <a href="https://www.facebook.com/marv.brnstn" class="no-deco">
-          <i class="fa fa-facebook-square w3-hover-opacity"></i>
-        </a>
         <a href="mailto:website@mbornstein.de" class="no-deco">
           <i class="fa fa-envelope-square w3-hover-opacity"></i>
+        </a>
+        <a href="https://scholar.google.com/citations?user=K2ql0KAAAAAJ&hl=en" class="no-deco">
+          <i class="fa fa-user-graduate-square w3-hover-opacity"></i>
         </a>
       </div>
     </header>
