add correct icon

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ and is wrapped around the whole page content, except for the footer in this exam
           <i class="fa fa-envelope-square w3-hover-opacity"></i>
         </a>
         <a href="https://scholar.google.com/citations?user=K2ql0KAAAAAJ&hl=en" class="no-deco">
-          <i class="fa fa-user-graduate-square w3-hover-opacity"></i>
+          <i class="fa fa-graduation-cap w3-hover-opacity"></i>
         </a>
       </div>
     </header>
